Tmp commit, merge attempt

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@ target/sim/vsim/modelsim.ini
 target/sim/vsim/transcript
 target/sim/vsim/vsim.wlf
 target/sim/vsim/work/
+
+.vscode
+*dtb
+tmp*
+backup
+
+# Vivado products
+.Xil
+vivado*
+webtalk*
