Ara: Adding Ara to Cheshire SoC and update flow
* Add util.mk for utility targets

* Update .gitignore for new flow

* Adding target/common/ara.mk

* CVA6 switched to cv64a6_imafdcv_sv39

* Added patches for CVA6 and Ara

* Set AxiUserWidth and AxiAddrWidth to 64, as CVA6 + Ara require

* Adding naive Ara integration (v0.2) in cheshire_soc.sv

* Add debug ILAs for CVA6 and Ara in target/xilinx/scripts/run.tcl

* Add utility TCL scripts in target/xilinx/scripts/tcl

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,21 @@ sw/deps/.patched
 target/sim/models
 
 # VSIM generated files
-target/sim/vsim/compile.*.tcl
-target/sim/vsim/*.log
-target/sim/vsim/modelsim.ini
-target/sim/vsim/transcript
-target/sim/vsim/vsim.wlf
-target/sim/vsim/work/
+compile.*.tcl
+*.log
+modelsim.ini
+transcript
+vsim.wlf
+work/
+
+.vscode
+*dtb
+tmp*
+backup
+
+# Vivado products
+.Xil
+vivado*
+webtalk*
+*prm
+*mcs
